# mtra-cpp

./: .gitignore  MODULE.bazel  README.md  TODO.md
labs/hermite_visual/: BUILD.bazel  hermite_visual.cc
labs/orderbook/: BUILD.bazel  orderbook.h  orderbook_benchmark.cc  orderbook_test.cc
mtra/allocator/: BUILD.bazel  TODO.md  free_list_allocator.h
mtra/concurrency/: BUILD.bazel  TODO.md  spsc_queue_locked.h  spsc_queue_lockfree.h
mtra/concurrency/lockfree/: mpmc_stack_1.h  mpmc_stack_1_benchmark.cc  spsc_queue.h
mtra/container/: BUILD.bazel  vector.h  vector_benchmark.cc  vector_test.cc
mtra/container/internal/: TODO.md  normal_iterator.h
mtra/dsp/: BUILD.bazel  TODO.md  hermite_interpolation.h  hermite_interpolation_benchmark.cc  hermite_interpolation_test.cc
mtra/functional/: BUILD.bazel  function.h  function_test.cc
mtra/iterator/: BUILD.bazel  TODO.md  normal_iterator.h  reverse_iterator.h
mtra/memory/: BUILD.bazel  TODO.md
mtra/meta/: BUILD.bazel  type_traits.h
mtra/simd/: BUILD.bazel  TODO.md  poly_float.h
mtra/span/: BUILD.bazel  span.h
mtra/vector/: BUILD.bazel  TODO.md  vector.h  vector_test.cc
