package(default_visibility = ["//visibility:public"])

cc_library(
    name = "orderbook",
    hdrs = [
        "orderbook.h",
    ],
)

cc_test(
    name = "orderbook_test",
    srcs = ["orderbook_test.cc"],
    deps = [
        ":orderbook",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "orderbook_benchmark",
    srcs = ["orderbook_benchmark.cc"],
    deps = [
        ":orderbook",
        "@google_benchmark//:benchmark_main",
    ],
)
