package(default_visibility = ["//visibility:public"])

cc_library(
    name = "lockfree__spsc_queue",
    hdrs = ["lockfree/spsc_queue.h"],
)

cc_test(
    name = "lockfree__spsc_queue_test",
    srcs = ["lockfree/spsc_queue_test.cc"],
    deps = [
        ":lockfree__spsc_queue",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "lockfree__spsc_queue_benchmark",
    srcs = ["lockfree/spsc_queue_benchmark.cc"],
    deps = [
        ":lockfree__spsc_queue",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_library(
    name = "lockfree__mpmc_stack_1",
    hdrs = ["lockfree/mpmc_stack_1.h"],
)

cc_binary(
    name = "lockfree__mpmc_stack_1_benchmark",
    srcs = ["lockfree/mpmc_stack_1_benchmark.cc"],
    deps = [
        ":lockfree__mpmc_stack_1",
        "@google_benchmark//:benchmark_main",
    ],
)
